internal/kgateway/agentgatewaysyncer/testdata/outputs/backend/backend-default.yaml
Backends:
- name: default/example-backend
  static:
    host: example.com
    port: 8080
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  gatewayName: default/example-gateway
  key: default/example-gateway.http
  name: http
  protocol: HTTP
Routes:
- backends:
  - backend:
      backend: default/example-backend
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  routeName: default/example-route
