internal/kgateway/agentgatewaysyncer/testdata/outputs/backend/bedrock-backend.yaml
Backends:
- ai:
    providerGroups:
    - providers:
      - bedrock:
          guardrailIdentifier: guardrail-policy-id
          guardrailVersion: guardrail-policy-version
          model: anthropic.claude-3-5-haiku-20241022-v1:0
          region: us-west-2
        name: backend
  name: default/bedrock
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  gatewayName: default/example-gateway
  key: default/example-gateway.http
  name: http
  protocol: HTTP
Policies:
- backend:
    auth:
      aws:
        explicitConfig:
          accessKeyId: fakeAccessKeyId
          region: us-west-2
          secretAccessKey: fakeSecretKeyString
          sessionToken: ""
  name: auth-default/bedrock-backend
  target:
    subBackend: default/bedrock/backend
Routes:
- backends:
  - backend:
      backend: default/bedrock
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  routeName: default/example-route
