internal/kgateway/agentgatewaysyncer/testdata/outputs/backend/multipool-secret-auth.yaml
Backends:
- ai:
    providerGroups:
    - providers:
      - name: openai
        openai:
          model: gpt-4-turbo
      - gemini:
          model: gemini-1.5-pro
        name: gemini
  name: default/multipool-secret
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  gatewayName: default/example-gateway
  key: default/example-gateway.http
  name: http
  protocol: HTTP
Policies:
- backend:
    auth:
      key:
        secret: gemini-api-key
  name: auth-default/multipool-secret-gemini
  target:
    subBackend: default/multipool-secret/gemini
- backend:
    auth:
      key:
        secret: sk-openai-secret-key
  name: auth-default/multipool-secret-openai
  target:
    subBackend: default/multipool-secret/openai
Routes:
- backends:
  - backend:
      backend: default/multipool-secret
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  routeName: default/example-route
